# parser

./: Dockerfile  pyproject.toml
src/: chunker.py  config.py  docling_client.py  downloader.py  embedder.py  handlers.py  indexer.py  main.py  speaches_client.py  transcription_handler.py
