[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parser"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "faststream[nats]>=0.5",
    "boto3>=1.34",
    "qdrant-client>=1.9",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
